[package]
name = "neptungen"
version = "0.9.7"
description = "Yet another static Website Generator"
repository = "https://github.com/phideg/neptungen"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["static", "site", "generator", "liquid", "ftp"]
categories = [
    "development-tools::testing",
    "web-programming::http-server",
    "command-line-utilities",
]
authors = ["Philipp Degler <deglerp@googlemail.com>"]
edition = "2021"

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[[bin]]
name = "neptungen"

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
lazy_static = "1"
liquid = "0.26"
log = "0.4"
image = "0.25"
flexi_logger = "0.29"
memmap = "0.7"
portpicker = "0.1"
pulldown-cmark = "0.12"
rayon = "1"
regex = "1"
rpassword = "7"
serde = "1"
serde_derive = "1"
serde_json = "1"
sha1 = "0.10"
ssh2 = "0.9"
suppaftp = "6"
term-painter = "0.4"
tokio = { version = "1.37", features = ["macros", "rt", "rt-multi-thread"] }
time = { version = "0.3", features = ["local-offset"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
walkdir = "2"
