[package]
name = "neptungen"
version = "0.11.2"
description = "Yet another static Website Generator"
repository = "https://github.com/phideg/neptungen"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["static", "site", "generator", "liquid", "ftp"]
categories = [
    "development-tools::testing",
    "web-programming::http-server",
    "command-line-utilities",
]
authors = ["Philipp Degler <deglerp@googlemail.com>"]
edition = "2024"
rust-version = "1.88"

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[[bin]]
name = "neptungen"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
clap = { version = "4.5.54", features = ["derive"] }
liquid = "0.26.11"
log = "0.4.29"
image = "0.25.9"
flexi_logger = "0.31.7"
memmap = "0.7.0"
portpicker = "0.1.1"
pulldown-cmark = "0.13.0"
rayon = "1.11.0"
regex = "1.12.2"
rpassword = "7.4.0"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.148"
sha1 = "0.10.6"
ssh2 = "0.9.5"
suppaftp = "7.0.7"
term-painter = "0.4.0"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread"] }
time = { version = "0.3.44", features = ["local-offset"] }
toml = "0.9.10"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
walkdir = "2.5.0"
